move inputs around

--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -15,22 +15,22 @@
       <h1>Outlinr</h1>
     </header>
     <main class="tabs three">
-      <input id='notes' type='radio' name='tabgroupB'>
-      <input id='todos' type='radio' name='tabgroupB'>
       <section id="sidebar">
-        +<input id='home' type='radio' name='tabgroupB' checked />
+        <input id='home' type='radio' name='tabgroupB' checked />
         <label class="stack" for="home">
           <input name="stack" type="radio">
           <span class="button toggle">
             <span class="icon-picture"></span> Home
           </span>
         </label>
+        <input id='notes' type='radio' name='tabgroupB'>
         <label class="stack" for="notes">
           <input name="stack" type="radio">
           <span class="button toggle">
             <span class="icon-puzzle"></span> Notes
           </span>
         </label>
+        <input id='todos' type='radio' name='tabgroupB'>
         <label class="stack" for="todos">
           <input name="stack" type="radio">
           <span class="button toggle">
