--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,17 +13,25 @@
   </head>
 
   <body>
-    <div id="content" class="container cent">
-    	<div class="card 3dhover">
-        <div class="img">
-          <img src="" alt="Filler image" title="Filler image" />
-        </div>
-        <div class="txt">
-          <h1 class="title">Nothing to see here</h1>
-          <p>Unless...</p>
-        </div>
-  		</div>
-    </div>
+    <header id="header">
+      <h1>Things that I've made</h1>
+    </header>
+    <main id="content">
+      <nav id="tabs">
+        <ul>
+          <li><a id="cool-btn"></a>Cool things</li>
+          <li><a id="not-so-cool-btn">Not quite as cool things</a></li>
+        </ul>
+      </nav>
+      <section id="items">
+        <aside id="cool">
+          
+        </aside>
+        <aside id="not-so-cool">
+          
+        </aside>
+      </section>
+    </main>
     <div id="scripts">
       <script src="app.js"></script>
     </div>
