--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,32 +8,34 @@
     <meta name="description" content="I wish i didnt have to make this">
     <meta name="author" content="Edaz">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?refresh=1">
 
   </head>
 
   <body>
-    <header id="header">
-      <h1>Things that I've made</h1>
-    </header>
-    <main id="content">
-      <nav id="tabs">
-        <ul>
-          <li><a id="cool-btn"></a>Cool things</li>
-          <li><a id="not-so-cool-btn">Not quite as cool things</a></li>
-        </ul>
-      </nav>
-      <section id="items">
-        <aside id="cool">
-          
-        </aside>
-        <aside id="not-so-cool">
-          
-        </aside>
-      </section>
-    </main>
+    <div id="wrapper">
+      <header id="header">
+        <h1>Things that I've made</h1>
+      </header>
+      <main id="content">
+        <nav id="tabs">
+          <ul>
+            <li><a id="cool-btn"></a>Cool things</li>
+            <li><a id="not-so-cool-btn">Not quite as cool things</a></li>
+          </ul>
+        </nav>
+        <section id="items">
+          <aside id="cool">
+
+          </aside>
+          <aside id="not-so-cool">
+
+          </aside>
+        </section>
+      </main>
+    </div>
     <div id="scripts">
-      <script src="app.js"></script>
+      <script src="app.js?refresh=1"></script>
     </div>
   </body>
 </html>
