Change to new avatar

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 				<div id="profile">
 					<div class="top">
 						<picture title="Edazpotato!">
-							<source srcset="assets/avatar.webp" type="image/webp">
-							<source srcset="assets/avatar.png" type="image/png">
-							<img class="avatar" src="assets/avatar.png" alt="Edazpotato's avatar"/>
+							<source srcset="assets/avatar-new.webp" type="image/webp">
+							<source srcset="assets/avatar-new.png" type="image/png">
+							<img class="avatar" src="assets/avatar-new.png" alt="Edazpotato's new avatar"/>
 						</picture>
 						<div class="bio">
 							<h1>Edazpotato</h1>
