--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
 		<!-- >>css<< -->
 		<!-- libraries -->
-		<link href="css/picnic.min.css" rel="stylesheet"/>
+		<link href="css/picnic.min.css" rel="stylesheet" media="all"/>
 		<!-- my css -->
-		<link href="css/styles.css" rel="stylesheet" preload/>
+		<link href="css/styles.css" rel="stylesheet" media="all" preload/>
 	</head>
 	<body>
 		<!-- things for if they dont have js -->
