--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
 		<!-- >>css<< -->
 		<!-- libraries -->
-		<link href="css/picnic.min.css" rel="stylesheet" media="all"/>
+		<link href="css/picnic.min.css" rel="stylesheet" media="screen"/>
 		<!-- my css -->
-		<link href="css/styles.css" rel="stylesheet" media="all" preload/>
+		<link href="css/styles.css" rel="stylesheet" media="screen" preload/>
 	</head>
 	<body>
 		<!-- things for if they dont have js -->
@@ -93,7 +93,7 @@
 		<div id="scripts">
 			<!-- google anylitics -->
 			<!-- Global site tag (gtag.js) - Google Analytics -->
-			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-176402796-1"></script>
+			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-176402796-1" defer></script>
 			<script>
 			  window.dataLayer = window.dataLayer || [];
 			  function gtag(){dataLayer.push(arguments);}
