Add a rel=canonical to head

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<!-- COMMON TAGS -->
 		<title>Edazpotato - Web developer and Robot creator</title>
 		<!-- Search Engine -->
+		<link rel="canonical" href="https://edaz.codes"/>
 		<meta name="description" content="Edazpotato is a Web Developer and Robot Creator. Here you can see all of the things I have made, and contact me.">
 		<meta name="image" content="https://edazpotato.github.io/assets/banner.png">
 		<meta name="keywords" content="edaz, potato, edazpotato, oficial, website, bot, robot, web, website, developer, dev, online, server, youtube, video, minecraft, mine, craft, datapack, data, pack">
