Fix margins resizing

--- a/datapacks/index.html
+++ b/datapacks/index.html
@@ -35,8 +35,10 @@
     				<aside class="card-tags"><span v-for="tag of pack.tags" class="card-tag">{{ tag }}</span></aside>
     				<section class="card-footer-bottom">
     					<aside class="card-date">{{ pack.date }}</aside>
-    					<aside class="card-download-btn"><a :href="pack.file_url" target="_blank" rel="noreferer" download><span class="download_icon"></span></a></aside>
-                        <aside v-if="'video_url' in pack" class="card-video-btn"><a :href="pack.video_url" target="_blank" rel="noreferer" download><span class="video_icon"></span></a></aside>
+                        <section class="card-btns">
+        					<aside class="card-download-btn"><a :href="pack.file_url" target="_blank" rel="noreferer" download class="card-btn"><span class="download_icon"></span></a></aside>
+                            <aside v-if="'video_url' in pack" class="card-video-btn"><a :href="pack.video_url" target="_blank" rel="noreferer" download class="card-btn"><span class="video_icon"></span></a></aside>
+                        </section>
     				</section>
     			</section>
     		</section>
