Add datapacks link & reoder little white links

--- a/index.html
+++ b/index.html
@@ -76,12 +76,15 @@
 						</div>
 					</div>
 				</div>
-				<div id="imgcredit" class="white-link">
-					<a href="https://www.pexels.com/photo/blue-body-of-water-with-orange-thunder-1102915/" target="_blank" rel="noreferrer">Photo by Johannes Plenio from Pexels</a>
-				</div>
-				<div id="privacypolicy" class="white-link">
+				<aside id="datapacks" class="white-link">
+					<a href="datapacks/" rel="noreferrer">Datapacks</a>
+				</aside>
+				<aside id="privacypolicy" class="white-link">
 					<a href="privacy/" rel="noreferrer">Privacy and data policy</a>
-				</div>
+				</aside>
+				<aside id="imgcredit" class="white-link">
+					<a href="https://www.pexels.com/photo/blue-body-of-water-with-orange-thunder-1102915/" target="_blank" rel="noreferrer">Photo by Johannes Plenio from Pexels</a>
+				</aside>
 			</header>
 			<main>
 				<div class="modal">
