--- a/datapacks/index.html
+++ b/datapacks/index.html
@@ -15,6 +15,9 @@
     <noscript>
       <strong>I'm sorry but this page doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <div id="offline-message" style="display: none;">
+      <strong>I'm sorry, but this page doesn't work properly offline. Please make sure that you have a working connection to the internet to continue.</strong>
+    </div>
     <div id="app">
     	<header>
     		<h1>Edazpotato's datapacks</h1>
@@ -52,6 +55,21 @@
     	<script src="js/vue.js"></script>
     	<!-- my js -->
     	<script src="js/app.js"></script>
+      <!-- offline detector -->
+      <script>
+        var offlineEl = document.getElementById("offline-message");
+        function toggleOfflineDisplay() {
+          if (offlineEl.style.display == "none") {
+            offlineEl.style.display = "block";
+          } else {
+            offlineEl.style.display = "none";
+          }
+        }
+        if (navigator.offline) {
+          toggleOfflineDisplay();
+        }
+        window.addEventListener("offline", toggleOfflineDisplay);
+        window.addEventListener("online", toggleOfflineDisplay);
     </div>
   </body>
 </html>
