Close script tag whoops...

--- a/datapacks/index.html
+++ b/datapacks/index.html
@@ -70,6 +70,7 @@
         }
         window.addEventListener("offline", toggleOfflineDisplay);
         window.addEventListener("online", toggleOfflineDisplay);
+      </script>
     </div>
   </body>
 </html>
