Tidy up some asset refernces to make old site kinda work

--- a/old/index.html
+++ b/old/index.html
@@ -31,20 +31,20 @@
     <meta property="og:url" content="https://edazpotato.github.io">
     <meta property="og:title" content="Edazpotato's Official website! No Scam! 100% Safe! No virus or IP log!">
     <meta property="og:description" content="Edazpotato's official website! This is where I'll host all of my junk and test out things and stuff. Follow me on twitter @Edazpotato">
-    <meta property="og:image" content="https://edazpotato.github.io/images/lightsaber.png">
+    <meta property="og:image" content="images/lightsaber.png">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://edazpotato.github.io">
     <meta property="twitter:title" content="Edazpotato's Official website! No Scam! 100% Safe! No virus or IP log!">
     <meta property="twitter:description" content="Edazpotato's official website! This is where I'll host all of my junk and test out things and stuff. Follow me on twitter @Edazpotato">
-    <meta property="twitter:image" content="https://edazpotato.github.io/images/lightsaber.png">
+    <meta property="twitter:image" content="images/lightsaber.png">
     
     <!-- meta tags that acctuly effect the content of the page -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="charset" content="utf-8">
     
     <!-- css -->
-    <link rel="stylesheet" href="/data-bin/homepage.css?a=b&v=69&OwO=420"/>
+    <link rel="stylesheet" href="data-bin/homepage.css?a=b&v=69&OwO=420"/>
   </head>
   <body>
     <!-- recipie for pintrest rich pin -->
@@ -71,13 +71,13 @@
     <div id="particlesJS"></div>
     <div id="wrapper">
       <div id="content">
-        <a href="https://edazpotato.github.io/redir/github" title="Check out my code on github!"><img class="avatar" alt="github avatar" src="https://github.com/edazpotato.png?size=2048" rel="noreferer"></a>
+        <a href="redir/github" title="Check out my code on github!"><img class="avatar" alt="github avatar" src="https://github.com/edazpotato.png?size=2048" rel="noreferer"></a>
         <h1 class="high">Edazpotato</h1>
         <p class="med">I make videos, websites, and other random things</p>
         <div class="row wrap">
-          <a class="col" href="https://edazpotato.github.io/redir/discord" aria-label="my Discord server invite link" title="Join my discord server!" target="_blank" rel="noreferer"><img class="black icon high" alt="Discord icon" src="/images/discord.png"></a>
-          <a class="col" href="https://edazpotato.github.io/redir/twitter" aria-label="my Twitter profile link" title="Follow me on twitter!" target="_blank" rel="noreferer"><img class="black icon high" alt="Twitter icon" src="/images/twitter.png"></a>
-          <a class="col" href="https://edazpotato.github.io/redir/youtube" aria-label="my youtube channel link" title="Subscibe to mah youtube channel" target="_blank" rel="noreferer"><img class="black icon high" alt="Youtube icon" src="/images/youtube.png"></a>
+          <a class="col" href="redir/discord" aria-label="my Discord server invite link" title="Join my discord server!" target="_blank" rel="noreferer"><img class="black icon high" alt="Discord icon" src="/images/discord.png"></a>
+          <a class="col" href="redir/twitter" aria-label="my Twitter profile link" title="Follow me on twitter!" target="_blank" rel="noreferer"><img class="black icon high" alt="Twitter icon" src="/images/twitter.png"></a>
+          <a class="col" href="redir/youtube" aria-label="my youtube channel link" title="Subscibe to mah youtube channel" target="_blank" rel="noreferer"><img class="black icon high" alt="Youtube icon" src="/images/youtube.png"></a>
         </div>
         <div class="theme-switch-wrapper">
           <label class="theme-switch" for="checkbox">
@@ -92,7 +92,7 @@
     </div>
     <div id="scripts">
       <!-- particles.js -->
-      <script src="/data-bin/particles.js"></script>
+      <script src="data-bin/particles.js"></script>
       <script>
         particlesJS.load("particlesJS", "/data-bin/pjs-config.json");
       </script>
