--- a/old/index.html
+++ b/old/index.html
@@ -75,9 +75,9 @@
         <h1 class="high">Edazpotato</h1>
         <p class="med">I make videos, websites, and other random things</p>
         <div class="row wrap">
-          <a class="col" href="redir/discord" aria-label="my Discord server invite link" title="Join my discord server!" target="_blank" rel="noreferer"><img class="black icon high" alt="Discord icon" src="/images/discord.png"></a>
-          <a class="col" href="redir/twitter" aria-label="my Twitter profile link" title="Follow me on twitter!" target="_blank" rel="noreferer"><img class="black icon high" alt="Twitter icon" src="/images/twitter.png"></a>
-          <a class="col" href="redir/youtube" aria-label="my youtube channel link" title="Subscibe to mah youtube channel" target="_blank" rel="noreferer"><img class="black icon high" alt="Youtube icon" src="/images/youtube.png"></a>
+          <a class="col" href="redir/discord" aria-label="my Discord server invite link" title="Join my discord server!" target="_blank" rel="noreferer"><img class="black icon high" alt="Discord icon" src="images/discord.png"></a>
+          <a class="col" href="redir/twitter" aria-label="my Twitter profile link" title="Follow me on twitter!" target="_blank" rel="noreferer"><img class="black icon high" alt="Twitter icon" src="images/twitter.png"></a>
+          <a class="col" href="redir/youtube" aria-label="my youtube channel link" title="Subscibe to mah youtube channel" target="_blank" rel="noreferer"><img class="black icon high" alt="Youtube icon" src="images/youtube.png"></a>
         </div>
         <div class="theme-switch-wrapper">
           <label class="theme-switch" for="checkbox">
