fix particles.js asset link

--- a/old/index.html
+++ b/old/index.html
@@ -94,7 +94,7 @@
       <!-- particles.js -->
       <script src="data-bin/particles.js"></script>
       <script>
-        particlesJS.load("particlesJS", "/data-bin/pjs-config.json");
+        particlesJS.load("particlesJS", "data-bin/pjs-config.json");
       </script>
       <script>
         const toggleSwitch = document.querySelector('.theme-switch input[type="checkbox"]');
