--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 		  "publisher" : {
 		    "@type" : "Organization",
 		    "name" : "Edazpotato"
-		  }
+		  },
+		  "headline": "Edazpotato! - Official website"
 		}
 		</script>
 		<!-- important meta tags -->
