Fix textarea lol

--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -14,10 +14,10 @@
     <header id="header">
       <h1>Outlinr</h1>
     </header>
-    <main>
-      <section>
-        <article id="notes">
-          <textarea id="notes-input" placeholder="Type something here, and it will be saved automaticaly!" />
+    <main class="full-heiht">
+      <section class="full-heiht">
+        <article id="notes" class="full-heiht">
+          <textarea id="notes-input" placeholder="Type something here, and it will be saved automaticaly!"></textarea>
         </article>
         <article id="todos">
           todos
