--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#00fff3">
     <!-- css -->
     <link href="css/outlinr.css" rel="stylesheet" />
-    <link href="css/picnic.min.css" rel="stylesheet" />
+    <!--<link href="css/picnic.min.css" rel="stylesheet" />-->
   </head>
   <body>
     <header id="header">
