Fix class names

--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -14,9 +14,9 @@
     <header id="header">
       <h1>Outlinr</h1>
     </header>
-    <main class="full-heiht">
-      <section class="full-heiht">
-        <article id="notes" class="full-heiht">
+    <main class="full-height">
+      <section class="full-height">
+        <article id="notes" class="full-height">
           <textarea id="notes-input" placeholder="Type something here, and it will be saved automaticaly!"></textarea>
         </article>
         <article id="todos">
