Add textarea-line numbers

--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -7,8 +7,9 @@
     <meta charset="utf-8">
     <meta name="theme-color" content="#00fff3">
     <!-- css -->
-    <link href="css/outlinr.css" rel="stylesheet" />
-    <!--<link href="css/picnic.min.css" rel="stylesheet" />-->
+    <link href="css/outlinr.css" rel="stylesheet" type="text/css"/>
+    <!--<link href="css/picnic.min.css" rel="stylesheet" type="text/css"/>-->
+    <link href="css/tln.min.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <header id="header">
@@ -29,6 +30,7 @@
     </footer>
     <div id="scripts">
       <script src="js/outlinr.js" defer></script>
+      <script src="js/tln.min.js" defer></script>
     </div>
   </body>
 </html>
