Fix sylesheets and scripts

--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -9,7 +9,6 @@
     <!-- css -->
     <link href="css/outlinr.css" rel="stylesheet" type="text/css"/>
     <!--<link href="css/picnic.min.css" rel="stylesheet" type="text/css"/>-->
-    <link href="css/tln.min.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <header id="header">
@@ -29,8 +28,8 @@
       
     </footer>
     <div id="scripts">
+      <script src="js/mousetrap.min.js" defer></script>
       <script src="js/outlinr.js" defer></script>
-      <script src="js/tln.min.js" defer></script>
     </div>
   </body>
 </html>
