Make textarea autofocus

--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -17,7 +17,7 @@
     <main class="full-height">
       <section class="full-height">
         <article id="notes" class="full-height">
-          <textarea id="notes-input" placeholder="Type something here, and it will be saved automaticaly!" class="mousetrap" focus></textarea>
+          <textarea id="notes-input" placeholder="Type something here, and it will be saved automaticaly!" class="mousetrap" autofocus></textarea>
         </article>
         <article id="todos">
           todos
