Add meta tags to outlinr and datapacks

--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -1,6 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- neat meta generator: https://megatags.co/ -->
+    <!-- boring meta tags -->
+    <!-- Search Engine -->
+    <meta name="description" content="Outlinr is the fast, simple, FREE all in one tool to keep track of your thoughts">
+    <meta name="image" content="https://edazpotato.github.io/outlinr/images/social.png">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="Outlinr - Orginze your thoughts">
+    <meta itemprop="description" content="Outlinr is the fast, simple, FREE all in one tool to keep track of your thoughts">
+    <meta itemprop="image" content="https://edazpotato.github.io/outlinr/images/social.png">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Outlinr - Orginze your thoughts">
+    <meta name="twitter:description" content="Outlinr is the fast, simple, FREE all in one tool to keep track of your thoughts">
+    <meta name="twitter:site" content="@edazpotato">
+    <meta name="twitter:creator" content="@edazpotato">
+    <meta name="twitter:image:src" content="https://edazpotato.github.io/outlinr/images/social.png">
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:title" content="Outlinr - Orginze your thoughts">
+    <meta name="og:description" content="Outlinr is the fast, simple, FREE all in one tool to keep track of your thoughts">
+    <meta name="og:image" content="https://edazpotato.github.io/outlinr/images/social.png">
+    <meta name="og:url" content="https://edazpotato.github.io/outlinr">
+    <meta name="og:site_name" content="Outlinr - Orginze your thoughts">
+    <meta name="og:locale" content="en_NZ">
+    <meta name="og:type" content="website">
     <!-- meta tags that have an actual impact on de page -->
     <title>Outlinr - Orginise your thoughts</title>
     <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
