--- a/datapacks/index.html
+++ b/datapacks/index.html
@@ -1,6 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  	<!-- neat meta generator: https://megatags.co/ -->
+  	<!-- meta tags for coical media -->
+	<!-- Search Engine -->
+	<meta name="description" content="Here you can find all of the datapacks amde by Edzpotato, with a hastle free downloads and infomative videows">
+	<meta name="image" content="https://edazpotato.github.io/datapacks/images/social.png">
+	<!-- Schema.org for Google -->
+	<meta itemprop="name" content="Edazpotato's Datapacks">
+	<meta itemprop="description" content="Here you can find all of the datapacks amde by Edzpotato, with a hastle free downloads and infomative videows">
+	<meta itemprop="image" content="https://edazpotato.github.io/datapacks/images/social.png">
+	<!-- Twitter -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="Edazpotato's Datapacks">
+	<meta name="twitter:description" content="Here you can find all of the datapacks amde by Edzpotato, with a hastle free downloads and infomative videows">
+	<meta name="twitter:site" content="@edazpotato">
+	<meta name="twitter:creator" content="@edazpotato">
+	<meta name="twitter:image:src" content="https://edazpotato.github.io/datapacks/images/social.png">
+	<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+	<meta name="og:title" content="Edazpotato's Datapacks">
+	<meta name="og:description" content="Here you can find all of the datapacks amde by Edzpotato, with a hastle free downloads and infomative videows">
+	<meta name="og:image" content="https://edazpotato.github.io/datapacks/images/social.png">
+	<meta name="og:url" content="https://edazpotato.github.io/datapacks">
+	<meta name="og:site_name" content="Edazpotato's Datapacks">
+	<meta name="og:locale" content="en_NZ">
+	<meta name="og:type" content="website">
+
+  	<!-- important meta tags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
