Fix some meta spelling and add outlinr image

--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -4,22 +4,22 @@
     <!-- neat meta generator: https://megatags.co/ -->
     <!-- boring meta tags -->
     <!-- Search Engine -->
-    <meta name="description" content="Outlinr is the fast, simple, FREE all in one tool to keep track of your thoughts">
+    <meta name="description" content="Outlinr is the simple, fast and FREE all in one tool to keep track of your thoughts">
     <meta name="image" content="https://edazpotato.github.io/outlinr/images/social.png">
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Outlinr - Orginze your thoughts">
-    <meta itemprop="description" content="Outlinr is the fast, simple, FREE all in one tool to keep track of your thoughts">
+    <meta itemprop="description" content="Outlinr is the simple, fast and FREE all in one tool to keep track of your thoughts">
     <meta itemprop="image" content="https://edazpotato.github.io/outlinr/images/social.png">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Outlinr - Orginze your thoughts">
-    <meta name="twitter:description" content="Outlinr is the fast, simple, FREE all in one tool to keep track of your thoughts">
+    <meta name="twitter:description" content="Outlinr is the simple, fast and FREE all in one tool to keep track of your thoughts">
     <meta name="twitter:site" content="@edazpotato">
     <meta name="twitter:creator" content="@edazpotato">
     <meta name="twitter:image:src" content="https://edazpotato.github.io/outlinr/images/social.png">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="Outlinr - Orginze your thoughts">
-    <meta name="og:description" content="Outlinr is the fast, simple, FREE all in one tool to keep track of your thoughts">
+    <meta name="og:description" content="Outlinr is the simple, fast and FREE all in one tool to keep track of your thoughts">
     <meta name="og:image" content="https://edazpotato.github.io/outlinr/images/social.png">
     <meta name="og:url" content="https://edazpotato.github.io/outlinr">
     <meta name="og:site_name" content="Outlinr - Orginze your thoughts">
