Make images show up bigger

--- a/datapacks/index.html
+++ b/datapacks/index.html
@@ -11,7 +11,7 @@
 	<meta itemprop="description" content="Here you can find all of the datapacks amde by Edzpotato, with a hastle free downloads and infomative videows">
 	<meta itemprop="image" content="https://edazpotato.github.io/datapacks/images/social.png">
 	<!-- Twitter -->
-	<meta name="twitter:card" content="summary">
+	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Edazpotato's Datapacks">
 	<meta name="twitter:description" content="Here you can find all of the datapacks amde by Edzpotato, with a hastle free downloads and infomative videows">
 	<meta name="twitter:site" content="@edazpotato">
