Make images show up bigger

--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -11,7 +11,7 @@
     <meta itemprop="description" content="Outlinr is the simple, fast and FREE all in one tool to keep track of your thoughts">
     <meta itemprop="image" content="https://edazpotato.github.io/outlinr/images/social.png">
     <!-- Twitter -->
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Outlinr - Orginze your thoughts">
     <meta name="twitter:description" content="Outlinr is the simple, fast and FREE all in one tool to keep track of your thoughts">
     <meta name="twitter:site" content="@edazpotato">
