Fix some spelling mistakes in datapacks meta

--- a/datapacks/index.html
+++ b/datapacks/index.html
@@ -4,22 +4,22 @@
   	<!-- neat meta generator: https://megatags.co/ -->
   	<!-- meta tags for coical media -->
 	<!-- Search Engine -->
-	<meta name="description" content="Here you can find all of the datapacks amde by Edzpotato, with a hastle free downloads and infomative videows">
+	<meta name="description" content="Here you can find all of the datapacks made by Edzpotato, with a hastle free downloads and infomative videos">
 	<meta name="image" content="https://edazpotato.github.io/datapacks/images/social.png">
 	<!-- Schema.org for Google -->
 	<meta itemprop="name" content="Edazpotato's Datapacks">
-	<meta itemprop="description" content="Here you can find all of the datapacks amde by Edzpotato, with a hastle free downloads and infomative videows">
+	<meta itemprop="description" content="Here you can find all of the datapacks made by Edzpotato, with a hastle free downloads and infomative videos">
 	<meta itemprop="image" content="https://edazpotato.github.io/datapacks/images/social.png">
 	<!-- Twitter -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Edazpotato's Datapacks">
-	<meta name="twitter:description" content="Here you can find all of the datapacks amde by Edzpotato, with a hastle free downloads and infomative videows">
+	<meta name="twitter:description" content="Here you can find all of the datapacks made by Edzpotato, with a hastle free downloads and infomative videos">
 	<meta name="twitter:site" content="@edazpotato">
 	<meta name="twitter:creator" content="@edazpotato">
 	<meta name="twitter:image:src" content="https://edazpotato.github.io/datapacks/images/social.png">
 	<!-- Open Graph general (Facebook, Pinterest & Google+) -->
 	<meta name="og:title" content="Edazpotato's Datapacks">
-	<meta name="og:description" content="Here you can find all of the datapacks amde by Edzpotato, with a hastle free downloads and infomative videows">
+	<meta name="og:description" content="Here you can find all of the datapacks made by Edzpotato, with a hastle free downloads and infomative videos">
 	<meta name="og:image" content="https://edazpotato.github.io/datapacks/images/social.png">
 	<meta name="og:url" content="https://edazpotato.github.io/datapacks">
 	<meta name="og:site_name" content="Edazpotato's Datapacks">
