--- a/datapacks/index.html
+++ b/datapacks/index.html
@@ -1,41 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  	<!-- neat meta generator: https://megatags.co/ -->
-  	<!-- meta tags for coical media -->
-	<!-- Search Engine -->
-	<meta name="description" content="Here you can find all of the datapacks made by Eadzpotato, with a hastle free downloads and infomative videos.">
-	<meta name="image" content="https://edazpotato.github.io/datapacks/images/social.png">
-	<!-- Schema.org for Google -->
-	<meta itemprop="name" content="Edazpotato's Datapacks">
-	<meta itemprop="description" content="Here you can find all of the datapacks made by Eadzpotato, with a hastle free downloads and infomative videos.">
-	<meta itemprop="image" content="https://edazpotato.github.io/datapacks/images/social.png">
-	<!-- Twitter -->
-	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Edazpotato's Datapacks">
-	<meta name="twitter:description" content="Here you can find all of the datapacks made by Eadzpotato, with a hastle free downloads and infomative videos.">
-	<meta name="twitter:site" content="@edazpotato">
-	<meta name="twitter:creator" content="@edazpotato">
-	<meta name="twitter:image:src" content="https://edazpotato.github.io/datapacks/images/social.png">
-	<!-- Open Graph general (Facebook, Pinterest & Google+) -->
-	<meta name="og:title" content="Edazpotato's Datapacks">
-	<meta name="og:description" content="Here you can find all of the datapacks made by Eadzpotato, with a hastle free downloads and infomative videos.">
-	<meta name="og:image" content="https://edazpotato.github.io/datapacks/images/social.png">
-	<meta name="og:url" content="https://edazpotato.github.io/datapacks">
-	<meta name="og:site_name" content="Edazpotato's Datapacks">
-	<meta name="og:locale" content="en_NZ">
-	<meta name="og:type" content="website">
-	  
 	  <!-- important meta tags -->
 	  <meta charset="utf-8">
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	  <meta name="viewport" content="width=device-width,initial-scale=1.0">
 	  <title>Edazpotato's datapacks</title>
+	  <!-- neat meta generator: https://megatags.co/ -->
+	  <!-- meta tags for social media -->
+	  <!-- Search Engine -->
+	  <meta name="description" content="Here you can find all of the datapacks made by Eadzpotato, with a hastle free downloads and infomative videos.">
+	  <meta name="image" content="https://edazpotato.github.io/datapacks/images/social.png">
+	  <!-- Schema.org for Google -->
+	  <meta itemprop="name" content="Edazpotato's Datapacks">
+	  <meta itemprop="description" content="Here you can find all of the datapacks made by Eadzpotato, with a hastle free downloads and infomative videos.">
+	  <meta itemprop="image" content="https://edazpotato.github.io/datapacks/images/social.png">
+	  <!-- Twitter -->
+	  <meta name="twitter:card" content="summary_large_image">
+	  <meta name="twitter:title" content="Edazpotato's Datapacks">
+	  <meta name="twitter:description" content="Here you can find all of the datapacks made by Eadzpotato, with a hastle free downloads and infomative videos.">
+	  <meta name="twitter:site" content="@edazpotato">
+	  <meta name="twitter:creator" content="@edazpotato">
+	  <meta name="twitter:image:src" content="https://edazpotato.github.io/datapacks/images/social.png">
+	  <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+	  <meta name="og:title" content="Edazpotato's Datapacks">
+	  <meta name="og:description" content="Here you can find all of the datapacks made by Eadzpotato, with a hastle free downloads and infomative videos.">
+	  <meta name="og:image" content="https://edazpotato.github.io/datapacks/images/social.png">
+	  <meta name="og:url" content="https://edazpotato.github.io/datapacks">
+	  <meta name="og:site_name" content="Edazpotato's Datapacks">
+	  <meta name="og:locale" content="en_NZ">
+	  <meta name="og:type" content="website">
 	
-	  <!-- csses -->
+	  <!-- css -->
 	  <link rel="stylesheet" href="css/styles.css">
-	  <!-- loading spinners -->
-	  <link rel="stylesheet" href="css/spinkit.min.css">
 	  <!-- icons -->
 	  <link rel="stylesheet" href="css/dp_list_icons.css">
   </head>
@@ -51,11 +48,11 @@
     		<h1>Edazpotato's datapacks</h1>
     	</header>
 	<section class="loader">
-		<div class="sk-fold">
-			<div class="sk-fold-cube"></div>
-			<div class="sk-fold-cube"></div>
-			<div class="sk-fold-cube"></div>
-			<div class="sk-fold-cube"></div>
+		<div class="sk-folding-cube">
+			<div class="sk-cube1 sk-cube"></div>
+			<div class="sk-cube2 sk-cube"></div>
+			<div class="sk-cube4 sk-cube"></div>
+			<div class="sk-cube3 sk-cube"></div>
 		</div>
 	</section>
     	<main id="dp-list" v-cloak>
