--- a/datapacks/index.html
+++ b/datapacks/index.html
@@ -47,13 +47,8 @@
     	<header>
     		<h1>Edazpotato's datapacks</h1>
     	</header>
-	<section class="loader">
-		<div class="sk-folding-cube">
-			<div class="sk-cube1 sk-cube"></div>
-			<div class="sk-cube2 sk-cube"></div>
-			<div class="sk-cube4 sk-cube"></div>
-			<div class="sk-cube3 sk-cube"></div>
-		</div>
+	<section class="loader" v-cloak>
+		<h1>Loading please wait...</h1>
 	</section>
     	<main id="dp-list" v-cloak>
     		<section v-for="pack of packs" :id="pack.id" class="card">
