Switch to new icon set

--- a/datapacks/index.html
+++ b/datapacks/index.html
@@ -34,7 +34,7 @@
 	  <!-- css -->
 	  <link rel="stylesheet" href="css/styles.css">
 	  <!-- icons -->
-	  <link rel="stylesheet" href="css/dp_list_icons.css">
+	  <link rel="stylesheet" href="css/dp_icons.css">
   </head>
   <body>
     <noscript>
@@ -67,8 +67,8 @@
     				<section class="card-footer-bottom">
     					<aside class="card-date">{{ pack.date }}</aside>
               <section class="card-btns">
-                <aside class="card-download-btn"><a :href="pack.file_url" target="_blank" rel="noreferer" download class="card-btn" title="Click to download this pack"><span class="download_icon"></span></a></aside>
-                <aside v-if="'video_url' in pack" class="card-video-btn"><a :href="pack.video_url" target="_blank" rel="noreferer" download class="card-btn" title="Click to watch this pack's video"><span class="video_icon"></span></a></aside>
+                <aside v-if="'file_url' in pack" class="card-download-btn"><a :href="pack.file_url" target="_blank" rel="noreferer" download class="card-btn" title="Click to download this pack"><span class="download_icon"></span></a></aside>
+                <aside v-if="'video_url' in pack" class="card-video-btn"><a :href="pack.video_url" target="_blank" rel="noreferer" download class="card-btn" title="Click to watch this pack's video"><span class="play_icon"></span></a></aside>
               </section>
     				</section>
     			</section>
