Make icon circled

--- a/datapacks/index.html
+++ b/datapacks/index.html
@@ -46,7 +46,7 @@
     <div id="app">
     	<header>
     		<h1>Edazpotato's datapacks</h1>
-		<aside id="help-btn"><a href="#help" rel="noreferer" title="Click to get some serious help"><span class="help_icon"></span></a></aside>
+		<aside id="help-btn"><a href="#help" rel="noreferer" title="Click to get some serious help"><span class="help_icon_circled"></span></a></aside>
     	</header>
 	<section class="loader" v-cloak>
 		<h1>Loading please wait...</h1>
